2003-07-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* README:           Added notes for the win/ build files.
	
	* win/Makefile.vc:  Patch #762878 applied to provide a sample VC++
	* win/rules.vc:     build system. This is NOT TEA but is a useful
	* win/nmakehlp.c:   alternative for win32 developers.

2003-04-04  Andreas Kupries  <andreask@activestate.com>

	* configure.in:
	* tclconfig/tcl.m4: Updated to newest tcl.m4, regenerated
	  configure's.

2003-02-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* README: Add generic unix build instructions
	and suggest the msys + mingw build process
	described in tcl/win/README.
	* README.cygwin: Remove Cygwin specific info since
	this is now covered in the README file.
	[Tc Patch 679416]

2002-10-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure:
	* configure.in: move the CFLAGS definition into TEA_ENABLE_SHARED
	and make it pick up the env CFLAGS at configure time.

2002-07-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: make TCL_DEFS come first in DEFS to that our DEFS
	would redefine the Tcl ones.

	* generic/tclsample.c: renamed Sha1 to Sha1_Cmd to better follow
	convention

2002-04-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure: regen'ed
	* configure.in (CLEANFILES): added pkgIndex.tcl

	* README.cygwin: improved notes on using cygwin.

2002-04-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: improved use of DESTDIR in install targets.
	Removed need for installdirs target.
	Broke TCLSH_PROG into TCLSH_ENV and TCLSH_PROG with TCLSH var and
	added comments about TCLSH_ENV.
	Added default shell and gdb targets.
	Added comments about using RUNTIME_SOURCES var.

	* README.cygwin: updated notes about using mingw gcc as a compiler.

	* configure: 
	* configure.in: updated to new TEA base that: prefixes all macros
	with TEA_* instead of SC_*; adds TEA_PREFIX, which defaults the
	prefix and exec_prefix values to what Tcl used; adds