@@ -1,3 +1,9 @@
+2003-10-01  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/rules.vc:    Fixed nmakehlp to find the correct Tcl or Tk
+	* win/nmakehlp.c:  version from the tcl.h header file. This will
+	* win/makefile.vc  then pick up the right libraries.
+
 2003-07-02  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* README:           Added notes for the win/ build files.
